# cpp-test

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: btc_address.cpp  btc_address.hpp  btc_func.cpp  btc_func.hpp  btc_global.h  btc_key.cpp  btc_key.hpp  btc_public.cpp  btc_public.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  test.cpp
task/: base_test_log.txt  extra_tests_log.txt  Описание алгоритма.txt  работа программы - видео (Linux).webm
